cicd/jenkins/install_on_aws_ec2/terraform/v1/03-securing-ec2-instances.tf

resource "aws_key_pair" "jenkins_cicd_key" {
  key_name   = "jenkins_cicd_key"
  public_key = file("~/.ssh/aws/demos/devsecops/devsecops-key.pub")
}


resource "aws_security_group" "jenkins_controller_security_group" {
  name   = "jenkins_controller_security_group"
  vpc_id = aws_vpc.jenkins_vpc.id

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http access"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins access"
    from_port   = 50000
    to_port     = 50000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "jenkins_agent_security_group" {
  name   = "jenkins_agent_security_group"
  vpc_id = aws_vpc.jenkins_vpc.id

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http access"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
